# config-client

./: .codeclimate.yml  .coveragerc  .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  mkdocs.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  strutil.py  tox.ini
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml
config/: __init__.py  __main__.py  __version__.py  _config.py  auth.py  cf.py  cfenv.py  cli.py  cloudfoundry.py  core.py  exceptions.py  http.py  logger.py  requests.py  spring.py  utils.py
config/ext/: __init__.py  aiohttp.py  fastapi.py  flask.py
docs/: 1.-introduction.md  1.-overview.md  2.-development.md  2.-standard-client.md  3.-command-line.md  3.-decorator.md  4.-asyncio.md  5.-singleton.md  6.-cloudfoundry.md  7.-development.md  8.command-line.md  command-line.md  contributing.md  development.md  index.md  overview.md  pull_request_template.md
docs/client/: 1.-standard-client.md  2.-decorator.md  3.-asyncio.md  4.-cloudfoundry.md  5.-singleton.md  asyncio.md  cloudfoundry.md  decorator.md  singleton.md  standard-client.md
docs/integrations/: 1.-flask.md  2.-aiohttp.md  3.-fastapi.md  aiohttp.md  fastapi.md  flask.md
tests/: conftest.py
tests/samples/: config.json
tests/unit/: test_cf.py  test_cfenv.py  test_cli.py  test_config.py  test_http.py  test_oauth2.py  test_spring.py  test_utils.py
tests/unit/ext/: test_aiohttp.py  test_fastapi.py  test_flask.py
