[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
exclude = venv
          __pycache__
          *.pyc
          __init__.py
          setup.py
ignore = E501 # line too long
         D100 # missing docstring in public module
         D101 # missing docstring in public class
         D102 # missing docstring in public method
         D103 # missing docstring in public function
         D105 # missing docstring in magic method
         D107 # missing docstring in __init__
         E203 # black bug?! whitespace before ':'
verbose = 2
doctests = True
show_source = True
statistics = True
count = True

[tool:pytest]
testpaths = tests

[mypy]
platform=linux

files = config
show_error_context = True
verbosity = 0
ignore_missing_imports = True
no_implicit_optional = True

warn_unused_configs = True
warn_return_any = True
warn_unused_ignores = True
warn_unreachable = True

[tox:tox]
envlist = py{36,37,38,39},pypy{3.6,3.7}

[testenv]
deps = -rrequirements-dev.txt
whitelist_externals = make
commands =
    make ci
