[bdist_wheel]
universal = 1

[metadata]
name = config-client
version = attr: config.__version__
author = alexandre menezes
author_email = alexandre.fmenezes@gmail.com
description = config client for Spring Cloud Config Server and Cloud Foundry
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_file = LICENSE
url = https://github.com/amenezes/config-client
project_urls =
  Documentation = https://config-client.amenezes.net
  Code = https://github.com/amenezes/config-client
  Issue tracker = https://github.com/amenezes/config-client/issues
  Changes = https://github.com/amenezes/config-client/releases
classifiers =
  Development Status :: 5 - Production/Stable
  Framework :: AsyncIO
  Framework :: Flask
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy
  Topic :: Software Development :: Libraries
  Topic :: Software Development :: Libraries :: Java Libraries
keywords = ['spring', 'cloudfoundry', 'springcloud']

[options]
packages = find:
install_requires =
  attrs >= 21.3.0
  glom >= 19.2.0
  requests >= 2.22.0
python_requires = >= 3.7

[options.extras_require]
cli = cleo>=0.7.6; rich
docs = portray
all = cleo>=0.7.6; portray; rich

[options.entry_points]
console_scripts =
  main = config.__main__:application.run [cli]

[flake8]
exclude = venv
          __pycache__
          *.pyc
          __init__.py

ignore = E501 # line too long
         D100 # missing docstring in public module
         D101 # missing docstring in public class
         D102 # missing docstring in public method
         D103 # missing docstring in public function
         D105 # missing docstring in magic method
         D107 # missing docstring in __init__
verbose = 2
doctests = True
show_source = True
statistics = True
count = True

[tool:pytest]
testpaths = tests

[mypy]
platform=linux

files = config
show_error_context = True
verbosity = 0
ignore_missing_imports = True
no_implicit_optional = True

warn_unused_configs = True
warn_return_any = True
warn_unused_ignores = True
warn_unreachable = True

[tox:tox]
envlist = py{37,38,39,310},pypy{3.6,3.7,3.8}

[testenv]
deps = -rrequirements-dev.txt
whitelist_externals = make
commands =
    make ci
