[bdist_wheel]
universal = 1

[metadata]
name = config-client
version = attr: config.__version__
author = Alexandre Menezes
author_email = alexandre.fmenezes@gmail.com
description = config client for Spring Cloud Config Server and Cloud Foundry
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files = LICENSE
url = https://github.com/amenezes/config-client
project_urls =
  Documentation = https://config-client.amenezes.net
  Code = https://github.com/amenezes/config-client
  Issue tracker = https://github.com/amenezes/config-client/issues
  Changes = https://github.com/amenezes/config-client/releases
classifiers =
  Development Status :: 5 - Production/Stable
  Framework :: AsyncIO
  Framework :: Flask
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy
  Topic :: Software Development :: Libraries
  Topic :: Software Development :: Libraries :: Java Libraries
keywords = ['spring', 'cloudfoundry', 'springcloud']

[options]
packages = find:
install_requires =
  attrs >= 21.3.0
  glom >= 19.2.0
  requests >= 2.22.0
python_requires = >= 3.7

[options.extras_require]
cli = click>=8.1.3; rich>=12.6.0; trogon>=0.5.0
docs = mkdocs-material
all = click>=8.1.3; mkdocs-material; rich>=12.6.0; trogon>=0.5.0

[options.entry_points]
console_scripts =
  config = config.__main__:cli

[flake8]
exclude = venv
          __pycache__
          *.pyc
          __init__.py

ignore = E501
verbose = 2
doctests = True
show_source = True
statistics = True
count = True

[tool:pytest]
testpaths = tests

[mypy]
platform=linux

files = config
show_error_context = True
verbosity = 0
ignore_missing_imports = True
no_implicit_optional = True

warn_unused_configs = True
warn_return_any = True
warn_unused_ignores = True
warn_unreachable = True

[tox:tox]
envlist = py{37,38,39,310,311,312},pypy{3.8,3.9,3.10}

[testenv]
deps = -rrequirements-dev.txt
whitelist_externals = make
commands =
    make ci
